# RAPID

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  agents-page.yml  bump-version.md  config.json  definitions_todo.md  issues-todo.md  issues.md  merge_quality.md  mindbridge-prompt-notes.md  mindbridge-successful-prompts.md  nightshift.md  package-lock.json  package.json  rapid-self-todo.md  setstoadd.md  setup.sh  technical_documentation.md  todo-explore.md  todo-new.md  todo.md  todo_new.md  tood.md  user-todo.md  user_plan.md  v3.5-todo.md  v4.0-spec.md  v6.md  web-errors.md  web-install.md
web/: Makefile
web/backend/: Makefile  pyproject.toml
web/backend/alembic/: env.py
web/backend/alembic/versions/: 0001_initial_schema.py  0002_project_registry_columns.py  0003_kanban_column_card.py  0004_agent_runtime.py  0005_agent_prompts.py  0006_kanban_v2_autopilot.py  0007_chat_persistence.py  (+3 more)
web/backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  sync_engine.py
web/backend/rapid_web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
web/backend/service/: com.rapid.web.plist  rapid-web.service
web/backend/tests/: conftest.py  test_autopilot_worker.py  test_card_routing.py  test_chat_for_run.py  test_chat_models.py  test_chat_service.py  test_chats_router.py  test_codebase_service.py  test_config.py  test_dashboard_router.py  test_database.py  test_file_watcher.py  test_init.py  test_kanban_service.py  test_kanban_tools.py  test_logging_config.py  test_main.py  test_migration_0007.py  test_migrations.py  test_project_service.py  test_projects_api.py  test_skill_args_sanitizer.py  test_skill_catalog_service.py  test_skill_frontmatter.py  test_skill_preconditions.py  test_skill_runner_build_prompt.py  test_skills_end_to_end.py  test_skills_router.py  test_sync_engine.py  test_views_api.py
(+2623 files in other folders)
